# xtrend-vanilla

./: .gitignore  AUTOPILOT-README.md  CLAUDE.md  CPD_NORMALIZATION_FIX_SUMMARY.md  LICENSE  PHASE6_VISUALIZATION_GUIDE.md  README.md  TRAINING_GUIDE.md  TRAINING_SETUP.md  VALIDATION_RESULTS.md  main.py  paper.txt  phases.md  pyproject.toml  pytest.ini
.claude/: settings.json
.claude/agents/: code-reviewer.md
.claude/hooks/: CODEX_REVIEW_SETUP.md  README.md  codex-review-hook.py
.claude/skills/: X_TREND_SKILLS_SUMMARY.md  skill-rules.json
conf/: experiment.yaml
conf/backtest/: vectorbt.yaml
conf/context/: time_equivalent.yaml
conf/cpd/: gpflow.yaml  ruptures.yaml
conf/data/: futures.yaml
conf/model/: xtrend.yaml
conf/trainer/: lightning.yaml
data/bloomberg/: BLOOMBERG_EXPORT_INSTRUCTIONS.md  README.md  XTREND_ASSET_EXPANSION_NOTES.md  symbol_map.csv  symbol_map_expanded.csv
dev/: README.md
dev/active/: bloomberg-viz-context.md  bloomberg-viz-tasks.md
docs/: cpd-normalization-fix.md  phase2-validation-report.md
docs/plans/: 2025-11-16-bloomberg-csv-redesign.md  2025-11-16-bloomberg-streamlit-explorer-design.md  2025-11-16-bloomberg-streamlit-explorer.md  2025-11-17-phase1-data-pipeline-features.md  2025-11-17-phase2-cpd-design.md  2025-11-17-phase2-gp-cpd-implementation.md  2025-11-17-phase3-neural-architecture.md  2025-11-17-phase4-context-set-construction.md  2025-11-17-phase5-cross-attention.md  2025-11-18-phase6-decoder-and-losses.md  2025-11-19-align-training-with-paper-spec.md
requirements/: bloomberg.txt
scripts/: README.md  batch_generate_cpd_cache.py  bloomberg_explorer.py  convert_bloomberg_to_parquet.py  debug_cpd.py  debug_cpd_detailed.py  eval_baseline_dmn.py  generate_bloomberg_workbook.py  phase1_visualizations.py  phase6_visualizations.py  quick_vis.py  reshape_bloomberg_csv.py  test_asset_start_date_filtering.py  test_cpd_normalization.py  train_baseline_dmn.py  train_xtrend.py
scripts/bloomberg_viz/: analysis.py  charts.py  data_loader.py  quality.py  regimes_tab.py  returns_tab.py
tests/: conftest.py  test_features.py  test_lookahead_bias_fix.py  test_regimes_tab.py  test_smoke.py  test_train_integration.py
tests/context/: __init__.py  test_sampler.py  test_types.py
tests/cpd/: __init__.py  conftest.py  test_gp_fitter.py  test_segmenter.py  test_types.py  test_validation.py
tests/data/: test_returns_vol.py  test_sources.py  test_sources_integration.py
tests/features/: test_builder.py  test_indicators.py
tests/integration/: test_phase1_complete.py  test_phase2_complete.py  test_phase3_complete.py  (+3 more)
xtrend/: __init__.py  runner.py
(+277 files in other folders)
