[project]
name = "xtrend-revised"
version = "0.1.0"
description = "X-Trend: Few-Shot Learning for Financial Time-Series Trend-Following"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Data processing
    "pandas>=2.3.0",
    "numpy>=2.0.0",
    "pyarrow>=15.0.0",

    # Bloomberg export tools
    "openpyxl>=3.1.5",

    # Visualization
    "streamlit>=1.28.0",
    "plotly>=5.17.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["xtrend"]

[tool.uv]
dev-dependencies = []
