[project]
name = "xtrend-revised"
version = "0.1.0"
description = "X-Trend: Few-Shot Learning for Financial Time-Series Trend-Following"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Data processing
    "pandas>=2.3.0",
    "numpy>=2.0.0",
    "pyarrow>=15.0.0",
    "scipy>=1.11.0",

    # Bloomberg export tools
    "openpyxl>=3.1.5",

    # Visualization
    "streamlit>=1.28.0",
    "plotly>=5.17.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",

    # Technical analysis
    "ta>=0.11.0",

    # GP Change-Point Detection
    "torch>=2.0.0",
    "gpytorch>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["xtrend"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]
